src/objects/Service_Management_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>General settings for Service Management application</description>
    <fields>
        <fullName>Allow_Box_Size_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, staff has the option to specify the box size to provide, overriding the default for the family size.</inlineHelpText>
        <label>Allow Bag/Box Size Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Overage__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, staff can override the alert that monthly point or visit limits have been exceeded.</inlineHelpText>
        <label>Allow Overage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_in_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if your Service Management requires clients to check in before shopping and check out afterward</inlineHelpText>
        <label>Check-in Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monthly_Base_Points__c</fullName>
        <inlineHelpText>Number of monthly points for a one-person household.  Leave blank if you do not limit points.</inlineHelpText>
        <label>Monthly Base Points</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Points_Per_Adult__c</fullName>
        <inlineHelpText>Additional monthly points per adult over one.</inlineHelpText>
        <label>Monthly Points Per Adult</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Points_Per_Child__c</fullName>
        <inlineHelpText>Additional monthly points per child in household.</inlineHelpText>
        <label>Monthly Points Per Child</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proof_of_Address_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to require proof of address for new client households.</inlineHelpText>
        <label>Proof of Address Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proof_of_Address_Update_Interval__c</fullName>
        <inlineHelpText>Number of months after which updated proof of address is required for existing households.</inlineHelpText>
        <label>Proof of Address Update Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proof_of_Infant_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proof of Infant Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Require_Unique_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to prevent users from adding duplicate addresses.  If unchecked, users are still alerted when entering a duplicate, but can choose to continue.</inlineHelpText>
        <label>Require Unique Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Id__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to show the Id field for member lookup.  If unchecked, an Id field will show.</inlineHelpText>
        <label>Show Id</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <description>Semi-colon delimited list of tags for client households.</description>
        <inlineHelpText>Semi-colon delimited list of tags for client households. Example:  Special Diet; Spanish Speaker</inlineHelpText>
        <label>Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Track_Checkout_Weight__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you track checkout weight.</inlineHelpText>
        <label>Track Checkout Weight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Track_Points__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you track monthly points. If unchecked, application will track bag/box size instead.</inlineHelpText>
        <label>Track Points</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visit_Frequency_Limit__c</fullName>
        <inlineHelpText>Restrictions on the number of visits over a ceratain time period. Accepted values for this setting are Weekly, Biweekly, Monthly, Twice Monthly, Every XX Days (where XX is a minimum number of days allwoed between visits)</inlineHelpText>
        <label>Visit Frequency Limit</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Welcome_Alert__c</fullName>
        <inlineHelpText>Optional alert that will be shown prominently on Service Management intake tab.</inlineHelpText>
        <label>Welcome Alert</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Welcome_Message__c</fullName>
        <inlineHelpText>Shown at top of Service Management intake tab</inlineHelpText>
        <label>Welcome Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Service Management Settings</label>
</CustomObject>